# AML-Copilot

./: .gitignore  CLAUDE.md  DESIGN_SPEC.md  pyproject.toml  run_batch.py
aml_copilot/: agent.py
aml_copilot/agents/: __init__.py  critic.py  evidence.py  narrative.py  triage.py
aml_copilot/tools/: __init__.py  evidence.py  scoring.py  validation.py
tests/: sample_transactions.py  test_critic_agent.py  test_evidence_agent.py  test_evidence_tools.py  test_narrative_agent.py  test_scoring.py  test_triage_agent.py  test_validation.py
